2006-03-19  Vincent Untz  <vuntz@gnome.org>

	* foundation.gnome.org/img/logos/fluendo.png:
	* foundation.gnome.org/img/logos/imendio.png:
	* foundation.gnome.org/img/logos/nokia.gif:
	* foundation.gnome.org/img/logos/openedhand.png:
	* foundation.gnome.org/img/logos/sflc.gif:
	* foundation.gnome.org/index.wml:
	* foundation.gnome.org/about/index.wml: update lists/logos of advisory
	board members
	* foundation.gnome.org/elections/2005/.cvsignore: updated
	* include/evilsedhack: tell the browser the pages are in UTF-8

2006-01-18  Murray Cumming  <murrayc@murrayc.com>

	* foundation.gnome.org/legal/index.wml: Actually link to the licensing 
	page. We do not seem to have done this so far.

2006-01-07  Vincent Untz  <vuntz@gnome.org>

	* index.wml:
	* news/index.wml: add news about the new board
	* elections/2005/index.wml: link to the official results
	* about/index.wml: update for new board, comment out the executive
	director part
	* about/history/index.wml: add the 2004-2005 board

2006-01-07  Vincent Untz  <vuntz@gnome.org>

	* foundation.gnome.org/vote/vote.css:
	* foundation.gnome.org/vote/votes.wml:
	* foundation.gnome.org/vote/include/step4-commit.php: display tokens
	in monospace so that there's no ambiguity

2005-11-14  Vincent Untz  <vuntz@gnome.org>

	* foundation.gnome.org/index.wml:
	* foundation.gnome.org/news/index.wml: add news about referendum
	results
	* foundation.gnome.org/elections/2005/rules.wml: updated for the
	referendum results
	* foundation.gnome.org/referenda/2005-10/index.wml: ditto

2005-11-13  Vincent Untz  <vuntz@gnome.org>

	* foundation.gnome.org/membership/members.wml: fix for email addresses

2005-11-13  Vincent Untz  <vuntz@gnome.org>

	Make the membership list dynamic.

	* foundation.gnome.org/htaccess: updated for the move of the list
	* foundation.gnome.org/membership/.cvsignore: updated
	* foundation.gnome.org/membership/Makefile.am: updated
	* foundation.gnome.org/membership/index.wml: fix link